--- a/app/src/main/res/layout/fragment_myinfo.xml
+++ b/app/src/main/res/layout/fragment_myinfo.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="120dp">
         <ImageView
+            android:id="@+id/iv_my_icon"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@mipmap/my_icon_big"
