--- a/app/src/main/res/layout/fragment_myinfo.xml
+++ b/app/src/main/res/layout/fragment_myinfo.xml
@@ -31,14 +31,14 @@
     </LinearLayout>
 
     <LinearLayout
-       android:gravity="center_horizontal"
+       android:gravity="center"
         android:background="@color/basic_background_color"
         android:layout_width="match_parent"
         android:layout_height="120dp">
         <ImageView
             android:id="@+id/iv_my_icon"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:src="@mipmap/my_icon_big"
             />
 
