--- a/app/src/main/res/layout/fragment_myhome.xml
+++ b/app/src/main/res/layout/fragment_myhome.xml
@@ -34,9 +34,10 @@
         android:layout_marginTop="20dp" >
 
         <ImageView
+            android:id="@+id/iv_my_icon_small"
             android:paddingLeft="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:src="@mipmap/my_icon_small" />
 
         <RelativeLayout
