--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -26,11 +26,10 @@
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/margin_20dp"
         android:background="@drawable/shape_login_input"
-        android:layout_width="350dp"
+        android:layout_width="@dimen/edit_input_length"
         android:layout_height="45dp">
         <ImageView
-            android:id="@+id/imagev_phone"
-            android:paddingLeft="@dimen/margin_10dp"
+            android:paddingLeft="@dimen/margin_edit_image"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@mipmap/phonenum"
@@ -49,11 +48,10 @@
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/margin_20dp"
         android:background="@drawable/shape_login_input"
-        android:layout_width="350dp"
+        android:layout_width="@dimen/edit_input_length"
         android:layout_height="45dp">
         <ImageView
-            android:id="@+id/imagev_password"
-            android:paddingLeft="@dimen/margin_10dp"
+            android:paddingLeft="@dimen/margin_edit_image"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@mipmap/password"
@@ -70,7 +68,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/edit_input_length"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_forget_psw"
@@ -82,22 +80,27 @@
             android:textSize="@dimen/top_text_20sp"
             android:textColor="@color/login_register"
             />
+        <LinearLayout
+            android:gravity="end"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
+            android:paddingRight="20dp"
             android:id="@+id/tv_register"
             android:paddingTop="@dimen/margin_10dp"
-            android:paddingLeft="200dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/register"
             android:textSize="@dimen/top_text_20sp"
             android:textColor="@color/login_register"
             />
+        </LinearLayout>
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_login"
         android:layout_marginTop="60dp"
-        android:layout_width="270dp"
+        android:layout_width="@dimen/edit_input_length"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_button_myinfo"
         android:text="@string/login"
