--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,113 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:gravity="center_horizontal"
-              android:background="@mipmap/longin_background"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-<TextView
+              android:layout_height="match_parent"
+              android:background="@mipmap/longin_background"
+              android:gravity="center_horizontal"
+              android:orientation="vertical">
 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/login"
-    android:textColor="@color/white"
-    android:textSize="@dimen/top_text_20sp"
-    android:layout_marginTop="@dimen/margin_10dp"
-    />
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_10dp"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        android:textSize="@dimen/top_text_20sp"
+        />
 
     <ImageView
-        android:layout_marginTop="40dp"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
+        android:layout_marginTop="40dp"
         android:src="@mipmap/logo_tangcan"
         />
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:layout_width="@dimen/edit_input_length"
+        android:layout_height="45dp"
         android:layout_marginTop="@dimen/margin_20dp"
         android:background="@drawable/shape_login_input"
-        android:layout_width="@dimen/edit_input_length"
-        android:layout_height="45dp">
+        android:orientation="horizontal">
+
         <ImageView
-            android:paddingLeft="@dimen/margin_edit_image"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:paddingLeft="@dimen/margin_edit_image"
             android:src="@mipmap/phonenum"
             />
+
         <EditText
             android:id="@+id/edit_phoneNum"
-            android:paddingLeft="@dimen/margin_10dp"
+            android:layout_width="350dp"
+            android:layout_height="45dp"
             android:background="@null"
             android:hint="@string/input_phone_num"
-            android:layout_width="350dp"
-            android:layout_height="45dp"/>
+            android:paddingLeft="@dimen/margin_10dp"/>
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:layout_width="@dimen/edit_input_length"
+        android:layout_height="45dp"
         android:layout_marginTop="@dimen/margin_20dp"
         android:background="@drawable/shape_login_input"
-        android:layout_width="@dimen/edit_input_length"
-        android:layout_height="45dp">
+        android:orientation="horizontal">
+
         <ImageView
-            android:paddingLeft="@dimen/margin_edit_image"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:paddingLeft="@dimen/margin_edit_image"
             android:src="@mipmap/password"
             />
+
         <EditText
             android:id="@+id/edit_password"
-            android:inputType="textPassword"
-            android:paddingLeft="@dimen/margin_10dp"
+            android:layout_width="350dp"
+            android:layout_height="45dp"
             android:background="@null"
             android:hint="@string/input_password"
-            android:layout_width="350dp"
-            android:layout_height="45dp"/>
+            android:inputType="textPassword"
+            android:paddingLeft="@dimen/margin_10dp"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="@dimen/edit_input_length"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tv_forget_psw"
-            android:paddingTop="@dimen/margin_10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:paddingLeft="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/forget_password"
-            android:textSize="@dimen/top_text_20sp"
-            android:textColor="@color/login_register"
-            />
-        <LinearLayout
-            android:gravity="end"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <TextView
-            android:paddingRight="20dp"
-            android:id="@+id/tv_register"
             android:paddingTop="@dimen/margin_10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/register"
-            android:textSize="@dimen/top_text_20sp"
+            android:text="@string/forget_password"
             android:textColor="@color/login_register"
+            android:textSize="@dimen/top_text_20sp"
             />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end">
+
+            <TextView
+                android:id="@+id/tv_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="20dp"
+                android:paddingTop="@dimen/margin_10dp"
+                android:text="@string/register"
+                android:textColor="@color/login_register"
+                android:textSize="@dimen/top_text_20sp"
+                />
         </LinearLayout>
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_marginTop="60dp"
         android:layout_width="@dimen/edit_input_length"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:background="@drawable/shape_button_myinfo"
         android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="@dimen/top_text_20sp"
         />
-
 
 
 </LinearLayout>
