--- a/app/src/main/res/layout/fragement_sendcar_not.xml
+++ b/app/src/main/res/layout/fragement_sendcar_not.xml
@@ -117,11 +117,11 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/btn_confirm"
+            android:id="@+id/btn_send_car"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/shape_button_confilm"
-            android:text="@string/confirm"
+            android:text="@string/send_car"
             android:textColor="@color/white"
             android:textSize="@dimen/top_text_20sp"
             />
