--- a/app/src/main/res/layout/fragment_send_car_list.xml
+++ b/app/src/main/res/layout/fragment_send_car_list.xml
@@ -39,11 +39,6 @@
 
         </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </LinearLayout>
 
     <LinearLayout
         android:paddingTop="10dp"
@@ -89,7 +84,7 @@
         <LinearLayout
             android:layout_marginLeft="20dp"
             android:id="@+id/ll_search_car"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center_vertical" >
 
@@ -107,15 +102,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:background="@mipmap/arrow_down" />
-
+            <LinearLayout
+                android:gravity="right"
+                android:paddingRight="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tv_query"
-                android:layout_marginLeft="35dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="查询"
                 android:textSize="@dimen/condition_sel"
                 />
+            </LinearLayout>
+
         </LinearLayout>
 
 
