--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,10 +11,10 @@
     </style>
     <!--我的信息字体样式 -->
     <style name="myinfo_text_style">
-        <item name="android:textColor"> @color/black_popwintext</item>
-        <item name="android:textSize"> @dimen/popwindowtext_15sp</item>
+        <item name="android:textColor">@color/black_popwintext</item>
+        <item name="android:textSize">@dimen/popwindowtext_15sp</item>
     </style>
-    <!--popupwindow 动画 -->
+    <!--popup window 动画 -->
     <style name="popwin_anim_style">
         <item name="android:windowEnterAnimation">@anim/popshow</item>
         <item name="android:windowExitAnimation">@anim/pophide</item>
@@ -23,6 +23,23 @@
     <!--自定义checkbook -->
     <style name="CustomCheckboxTheme" parent="@android:style/Widget.CompoundButton.CheckBox">
         <item name="android:button">@drawable/checkbox_style</item>
+    </style>
+    <!--开单linear layout样式 -->
+    <style name="BillingLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:divider">@drawable/linear_layout_divider</item>
+        <item name="android:showDividers">beginning|middle|end</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+    <!--开单edit text样式 -->
+    <style name="BillingEditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/billing_item_height</item>
+        <item name="android:background">@null</item>
+        <item name="android:paddingLeft">@dimen/billing_padding_left</item>
+        <item name="android:textSize">@dimen/billing_text</item>
     </style>
 
 </resources>
